--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuba Bicycles Compatibility Checker</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../public/style.css">
     <link href="https://fonts.cdnfonts.com/css/campton" rel="stylesheet">
 </head>
 <body>
     <header class="item" id="header-bg">
         <div class="yuba-img">
-            <a href="https://www.yubabikes.com"><img src="/yuba-logo.png" alt="yuba logo"></a>
+            <a href="https://www.yubabikes.com"><img src="../public/yuba-logo.png" alt="yuba logo"></a>
         </div>
         <div class="header-title">
             YUBA COMPATIBILITY CHECKER
