--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yuba Bicycles Compatibility Checker</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="https://yubabikes.com/wp-content/uploads/2022/07/favicon-yubabikes-32x32.png" sizes="32x32">
     <link href="https://fonts.cdnfonts.com/css/campton" rel="stylesheet">
 </head>
 <body>
